corrigi issue 5 com margin left e text-align

--- a/modulo1/css-bugfixes/bugfixes/index.css
+++ b/modulo1/css-bugfixes/bugfixes/index.css
@@ -80,19 +80,20 @@ div img {
 
 #container-de-descricao>ol {
     padding: 15px 0px;
-
 }
 
 #container-para-comprar {
     background-color: #e7eb90;
+     
 }
 
 #container-para-comprar>p {
     color: #c44f00;
-    padding: 100px 0;
-    font-size: 60px;
+    padding: 100px;
+    font-size: 60px;  
     
 }
+
 
 
 /**
@@ -108,6 +109,9 @@ div:last-child {
 
 table {
     width: 60%;
+    text-align: center;
+    margin-left: 400px;
+
 }
 
 td button {
